istio/dashboards.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: argocd-server
  namespace: argocd
spec:
  gateways:
    - istio-system/xquare-gateway
  hosts:
    - argo-cd.xquare.app
  http:
  - route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 80
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: kiali-server
  namespace: istio-system
spec:
  gateways:
    - xquare-gateway
  hosts:
    - kiali.xquare.app
  http:
  - route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: prometeus-server
  namespace: istio-system
spec:
  gateways:
    - xquare-gateway
  hosts:
    - prometheus.xquare.app
  http:
  - route:
    - destination:
        host: prometheus-server.prometheus.svc.cluster.local
        port:
          number: 80
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: jaeger-server
  namespace: istio-system
spec:
  gateways:
    - xquare-gateway
  hosts:
    - jaeger.xquare.app
  http:
    - route:
        - destination:
            host: tracing.istio-system.svc.cluster.local
            port:
              number: 80
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: grafana-server
  namespace: istio-system
spec:
  gateways:
    - xquare-gateway
  hosts:
    - grafana.xquare.app
  http:
    - route:
        - destination:
            host: prometheus-stack-grafana.monitoring.svc.cluster.local
            port:
              number: 80
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: prometheus-server
  namespace: istio-system
spec:
  gateways:
    - xquare-gateway
  hosts:
    - prometheus.xquare.app
  http:
    - route:
        - destination:
            host: prometheus-stack-kube-prom-prometheus.monitoring.svc.cluster.local
            port:
              number: 9090
