istio/gateway.yaml
kind: Gateway
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: xquare-gateway
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
  servers:
    - hosts:
        - '*'
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
    - hosts:
        - '*.xquare.app'
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: xquare-cert
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: argocd-server
  namespace: argocd
spec:
  gateways:
    - istio-system/xquare-gateway
  hosts:
    - argo-cd.xquare.app
  http:
  - route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 80
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: kiali-server
  namespace: istio-system
spec:
  gateways:
    - xquare-gateway
  hosts:
    - kiali.xquare.app
  http:
  - route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001
